--- a/jena-fuseki-0.2.7/pages/data-validator.html
+++ b/jena-fuseki-0.2.7/pages/data-validator.html
@@ -16,15 +16,16 @@
 -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head><title>SPARQLer Data Validator</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="fuseki.css" />
-  </head>
-  <body>
-    <h1>SPARQLer Data Validator</h1>
-    <div class="moreindent">
-      <form action="validate/data" method="post" accept-charset="UTF-8" >
-	    <textarea name="data" cols="70" rows="30">
+<head>
+<title>SPARQLer Data Validator</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" type="text/css" href="fuseki.css" />
+</head>
+<body>
+	<h1>SPARQLer Data Validator</h1>
+	<div class="moreindent">
+		<form action="validate/data" method="post" accept-charset="UTF-8">
+			<textarea name="data" cols="70" rows="30">
 # Prefixes for Turtle or TriG - these can be edited or removed.
 @base          &lt;http://example.org/base/> .
 @prefix :      &lt;http://example.org/> .
@@ -35,14 +36,12 @@
 
 
 </textarea>
-<br/>
-Input syntax:
-<input type="radio" name="languageSyntax" value="Turtle" checked="checked"/>Turtle
-<input type="radio" name="languageSyntax" value="TriG"/>TriG
-<input type="radio" name="languageSyntax" value="N-Triples"/>N-Triples
-<input type="radio" name="languageSyntax" value="N-Quads"/>N-Quad
-  <br/>
-      <!--
+			<br /> Input syntax: <input type="radio" name="languageSyntax"
+				value="Turtle" checked="checked" />Turtle <input type="radio"
+				name="languageSyntax" value="TriG" />TriG <input type="radio"
+				name="languageSyntax" value="N-Triples" />N-Triples <input
+				type="radio" name="languageSyntax" value="N-Quads" />N-Quad <br />
+			<!--
 Output syntax:
   <input type="checkbox" name="outputFormat" value="sparql" checked="checked"/>SPARQL
   <input type="checkbox" name="outputFormat" value="algebra"/>SPARQL algebra
@@ -54,14 +53,15 @@ Output syntax:
   <input type="radio" name="linenumbers" value="false"/>No
   <br/>
       -->
-        <input type="submit" value="Validate RDF Data" />
-      </form>
-      <hr/>
-Parsing provided by <a href="http://jena.apache.org/documentation/io/riot.html">Jena/RIOT</a>.
-Questions to 
-<href="mailto:users@jena.apache.org?s=[Data Validator]: "
+			<input type="submit" value="Validate RDF Data" />
+		</form>
+		<hr />
+		Parsing provided by <a
+			href="http://jena.apache.org/documentation/io/riot.html">Jena/RIOT</a>.
+		Questions to
+		<href ="mailto:users@jena.apache.org?s=[DataValidator]: "
  >the Jena users mailing list</a>
 (include full details of input).
     </div>
-  </body>
+</body>
 </html>
