--- a/jena-fuseki-0.2.7/pages/fuseki.html
+++ b/jena-fuseki-0.2.7/pages/fuseki.html
@@ -16,40 +16,49 @@
 -->
 
 <html>
-  <head>
-    <title>Fuseki - A SPARQL 1.1 Server</title>
-    <link rel="stylesheet" type="text/css" href="fuseki.css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  </head>
+<head>
+<title>Fuseki - A SPARQL 1.1 Server</title>
+<link rel="stylesheet" type="text/css" href="fuseki.css" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
 
-  <body>
-    <h1>Fuseki</h1>
+<body>
+	<h1>Fuseki</h1>
 
-    <h2>Server Management</h2>
-    <p><a href="control-panel.tpl">Control Panel</a></p>
-    
-    <h2>Documentation</h2>
-    <p><a href="http://jena.apache.org/documentation/serving_data/index.html">Fuseki documentation</a></p>
+	<h2>Server Management</h2>
+	<p>
+		<a href="control-panel.tpl">Control Panel</a>
+	</p>
 
-    <h2>Validators</h2>
-    <ul>
-      <li><a href="query-validator.html">SPARQL query validator</a></li>
-      <li><a href="update-validator.html">SPARQL update validator</a></li>
-      <li><a href="data-validator.html">RDF data validator</a></li>
-      <li><a href="iri-validator.html">IRI validator</a></li>
-    </ul>
+	<h2>Documentation</h2>
+	<p>
+		<a href="http://jena.apache.org/documentation/serving_data/index.html">Fuseki
+			documentation</a>
+	</p>
 
-    <h2>General SPARQL Service</h2>
-    <ul>
-      <li><a href="sparql.html">SPARQL query form</a></li>
-    </ul>
+	<h2>Validators</h2>
+	<ul>
+		<li><a href="query-validator.html">SPARQL query validator</a></li>
+		<li><a href="update-validator.html">SPARQL update validator</a></li>
+		<li><a href="data-validator.html">RDF data validator</a></li>
+		<li><a href="iri-validator.html">IRI validator</a></li>
+	</ul>
 
-    <h2>Standards</h2>
-    <ul>
-      <li> <a href="http://www.w3.org/TR/sparql11-query/">SPARQL 1.1 Query</a></li>
-      <li> <a href="http://www.w3.org/TR/sparql11-update/">SPARQL 1.1 Update</a></li>
-      <li> <a href="http://www.w3.org/TR/sparql11-protocol/">SPARQL 1.1 Protocol</a></li>
-      <li> <a href="http://www.w3.org/TR/sparql11-http-rdf-update/">SPARQL 1.1 Uniform HTTP Protocol for Managing RDF Graphs</a>
-    </ul>
-  </body>
+	<h2>General SPARQL Service</h2>
+	<ul>
+		<li><a href="sparql.html">SPARQL query form</a></li>
+	</ul>
+
+	<h2>Standards</h2>
+	<ul>
+		<li><a href="http://www.w3.org/TR/sparql11-query/">SPARQL 1.1
+				Query</a></li>
+		<li><a href="http://www.w3.org/TR/sparql11-update/">SPARQL
+				1.1 Update</a></li>
+		<li><a href="http://www.w3.org/TR/sparql11-protocol/">SPARQL
+				1.1 Protocol</a></li>
+		<li><a href="http://www.w3.org/TR/sparql11-http-rdf-update/">SPARQL
+				1.1 Uniform HTTP Protocol for Managing RDF Graphs</a>
+	</ul>
+</body>
 </html>
