--- a/jena-fuseki-0.2.7/pages/iri-validator.html
+++ b/jena-fuseki-0.2.7/pages/iri-validator.html
@@ -16,23 +16,24 @@
 -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head><title>SPARQLer IRI Validator</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="fuseki.css" />
-  </head>
-  <body>
-    <h1>SPARQLer IRI Validator</h1>
+<head>
+<title>SPARQLer IRI Validator</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" type="text/css" href="fuseki.css" />
+</head>
+<body>
+	<h1>SPARQLer IRI Validator</h1>
 
-    <div class="moreindent">
+	<div class="moreindent">
 
-      <form action="validate/iri"  accept-charset="UTF-8">
-	    <p>
-	      <textarea name="iri" cols="70" rows="2"></textarea>
+		<form action="validate/iri" accept-charset="UTF-8">
+			<p>
+				<textarea name="iri" cols="70" rows="2"></textarea>
 
-          <input type="submit" value="Validate IRI" />
-	    </p>
-      </form>
-      <hr/>
-    </div>
-  </body>
+				<input type="submit" value="Validate IRI" />
+			</p>
+		</form>
+		<hr />
+	</div>
+</body>
 </html>
