--- a/jena-fuseki-0.2.7/pages/query-validator.html
+++ b/jena-fuseki-0.2.7/pages/query-validator.html
@@ -16,19 +16,20 @@
 -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head><title>SPARQLer Query Validator</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="fuseki.css" />
+<head>
+<title>SPARQLer Query Validator</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" type="text/css" href="fuseki.css" />
 
-  </head>
-  <body>
-    <h1>SPARQLer Query Validator</h1>
+</head>
+<body>
+	<h1>SPARQLer Query Validator</h1>
 
-    <div class="moreindent">
+	<div class="moreindent">
 
-      <form action="validate/query" method="post" accept-charset="UTF-8">
-	<p>
-	  <textarea name="query" cols="70" rows="30">
+		<form action="validate/query" method="post" accept-charset="UTF-8">
+			<p>
+				<textarea name="query" cols="70" rows="30">
 PREFIX xsd:     &lt;http://www.w3.org/2001/XMLSchema#>
 PREFIX rdf:     &lt;http://www.w3.org/1999/02/22-rdf-syntax-ns#> 
 PREFIX rdfs:    &lt;http://www.w3.org/2000/01/rdf-schema#>
@@ -40,32 +41,25 @@ PREFIX dc:      &lt;http://purl.org/dc/elements/1.1/>
 SELECT ?book ?title
 WHERE
    { ?book dc:title ?title }</textarea>
-<br/>
-  Input syntax:<br/>
-    <input type="radio" name="languageSyntax" value="SPARQL" checked="checked"/>SPARQL
-    <input type="radio" name="languageSyntax" value="ARQ"/>SPARQL extended syntax
-  <br/>
-  <br/>
-Output:<br/>
-  <input type="checkbox" name="outputFormat" value="sparql" checked="checked"/>SPARQL<br/>
-  <input type="checkbox" name="outputFormat" value="algebra"/>SPARQL algebra<br/>
-  <input type="checkbox" name="outputFormat" value="quads"/>SPARQL algebra (quads)<br/>
-  <input type="checkbox" name="outputFormat" value="opt"/>SPARQL algebra
-(general optimizations)<br/>
-  <input type="checkbox" name="outputFormat" value="optquads"/>SPARQL algebra
-(quads, general optimizations)<br/>
-  <br/>
-  Line numbers:
-  <input type="radio" name="linenumbers" value="true" checked="checked"/>Yes
-  <input type="radio" name="linenumbers" value="false"/>No
-  <br/>
+				<br /> Input syntax:<br /> <input type="radio" name="languageSyntax"
+					value="SPARQL" checked="checked" />SPARQL <input type="radio"
+					name="languageSyntax" value="ARQ" />SPARQL extended syntax <br /> <br />
+				Output:<br /> <input type="checkbox" name="outputFormat"
+					value="sparql" checked="checked" />SPARQL<br /> <input
+					type="checkbox" name="outputFormat" value="algebra" />SPARQL
+				algebra<br /> <input type="checkbox" name="outputFormat"
+					value="quads" />SPARQL algebra (quads)<br /> <input type="checkbox"
+					name="outputFormat" value="opt" />SPARQL algebra (general
+				optimizations)<br /> <input type="checkbox" name="outputFormat"
+					value="optquads" />SPARQL algebra (quads, general optimizations)<br />
+				<br /> Line numbers: <input type="radio" name="linenumbers"
+					value="true" checked="checked" />Yes <input type="radio"
+					name="linenumbers" value="false" />No <br /> <input type="submit"
+					value="Validate SPARQL Query" />
+			</p>
+		</form>
 
-
-  <input type="submit" value="Validate SPARQL Query" />
-	</p>
-      </form>
-
-      <hr/>
-    </div>
-  </body>
+		<hr />
+	</div>
+</body>
 </html>
