--- a/jena-fuseki-0.2.7/pages/sparql.html
+++ b/jena-fuseki-0.2.7/pages/sparql.html
@@ -19,45 +19,42 @@
    limitations under the License.
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head><title>SPARQLer</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="fuseki.css" />
-  </head>
+<head>
+<title>SPARQLer</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" type="text/css" href="fuseki.css" />
+</head>
 
-  <body>
-    <h1>SPARQLer - General purpose processor</h1>
+<body>
+	<h1>SPARQLer - General purpose processor</h1>
 
-    <div class="moreindent">
+	<div class="moreindent">
 
-      <form action="sparql" method="get">
-	    <p>General SPARQL query : input query, set any options and press "Get Results"</p>
-	    <p>
-	      <textarea name="query" cols="70" rows="20"></textarea>
-	      <br/>
-	      Target graph URI (or use <code>FROM</code> in the query)
-	      <input name="default-graph-uri" size="25" value="" />
-	      <br/>
+		<form action="sparql" method="get">
+			<p>General SPARQL query : input query, set any options and press
+				"Get Results"</p>
+			<p>
+				<textarea name="query" cols="70" rows="20"></textarea>
+				<br /> Target graph URI (or use
+				<code>FROM</code>
+				in the query) <input name="default-graph-uri" size="25" value="" />
+				<br /> Output: <select name="output">
+					<option value="json">JSON</option>
+					<option value="xml">XML</option>
+					<option value="text">Text</option>
+					<option value="csv">CSV</option>
+					<option value="tsv">TSV</option>
+				</select> <br /> XSLT style sheet (blank for none): <input name="stylesheet"
+					size="20" value="/xml-to-html.xsl" /> <br /> <input
+					type="checkbox" name="force-accept" value="text/plain" /> Force the
+				accept header to
+				<tt>text/plain</tt>
+				regardless <br /> <input type="submit" value="Get Results" />
+			</p>
+		</form>
+	</div>
 
-          Output: <select name="output">
-            <option value="json">JSON</option>
-            <option value="xml">XML</option>
-            <option value="text">Text</option>
-            <option value="csv">CSV</option>
-            <option value="tsv">TSV</option>
-          </select>
-          <br/>
-	      XSLT style sheet (blank for none): 
-          <input name="stylesheet" size="20" value="/xml-to-html.xsl" />
-          <br/>
-          <input type="checkbox" name="force-accept" value="text/plain"/>
-          Force the accept header to <tt>text/plain</tt> regardless 
-	      <br/>
-	      <input type="submit" value="Get Results" />
-	    </p>
-      </form>
-    </div>
+	<hr />
 
-    <hr/>
-
-  </body>
+</body>
 </html>
