--- a/jena-fuseki-0.2.7/pages/update-validator.html
+++ b/jena-fuseki-0.2.7/pages/update-validator.html
@@ -15,19 +15,20 @@
    limitations under the License.
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head><title>SPARQLer Update Validator</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="fuseki.css" />
+<head>
+<title>SPARQLer Update Validator</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" type="text/css" href="fuseki.css" />
 
-  </head>
-  <body>
-    <h1>SPARQLer Update Validator</h1>
+</head>
+<body>
+	<h1>SPARQLer Update Validator</h1>
 
-    <div class="moreindent">
+	<div class="moreindent">
 
 
-      <form action="validate/update" method="post" accept-charset="UTF-8">
-	  <textarea name="update" cols="70" rows="30">
+		<form action="validate/update" method="post" accept-charset="UTF-8">
+			<textarea name="update" cols="70" rows="30">
 PREFIX xsd:     &lt;http://www.w3.org/2001/XMLSchema#>
 PREFIX rdf:     &lt;http://www.w3.org/1999/02/22-rdf-syntax-ns#> 
 PREFIX rdfs:    &lt;http://www.w3.org/2000/01/rdf-schema#>
@@ -36,27 +37,23 @@ PREFIX fn:      &lt;http://www.w3.org/2005/xpath-functions#>
 PREFIX apf:     &lt;http://jena.hpl.hp.com/ARQ/property#>
 
 </textarea>
-<br/>
-  Input syntax:
-    <input type="radio" name="languageSyntax" value="SPARQL" checked="checked"/>SPARQL
-    <input type="radio" name="languageSyntax" value="ARQ"/>SPARQL extended syntax
-  <br/>
-<!--
+			<br /> Input syntax: <input type="radio" name="languageSyntax"
+				value="SPARQL" checked="checked" />SPARQL <input type="radio"
+				name="languageSyntax" value="ARQ" />SPARQL extended syntax <br />
+			<!--
 Output syntax:
   <input type="checkbox" name="outputFormat" value="sparql" checked="checked"/>SPARQL
   <input type="checkbox" name="outputFormat" value="algebra"/>SPARQL algebra
   <input type="checkbox" name="outputFormat" value="quads"/>SPARQL algebra (quads)
   <br/>
 -->
-  Line numbers:
-  <input type="radio" name="linenumbers" value="true" checked="checked"/>Yes
-  <input type="radio" name="linenumbers" value="false"/>No
-  <br/>
+			Line numbers: <input type="radio" name="linenumbers" value="true"
+				checked="checked" />Yes <input type="radio" name="linenumbers"
+				value="false" />No <br /> <input type="submit"
+				value="Validate SPARQL Update" />
+		</form>
 
-  <input type="submit" value="Validate SPARQL Update" />
-      </form>
-
-      <hr/>
-    </div>
-  </body>
+		<hr />
+	</div>
+</body>
 </html>
